fix: fix the homepage route

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="text-center m-auto">
                     <h1>Saleh Alibrahim</h2>
                         <nav class="nav justify-content-center">
-                            <a class="nav-link " href="/index.httml">Home</a>
+                            <a class="nav-link " href="index.httml">Home</a>
                             <a class="nav-link " href="/about.html">About</a>
                         </nav>
                 </div>
