feat: add more projects

--- a/index.html
+++ b/index.html
@@ -102,6 +102,35 @@
 
                 <div class="card-deck text-dark">
                     <div class="card">
+                        <img height="300" class="card-img-top" src="images/travel.PNG" alt="Card image cap">
+                        <div class="card-body">
+                            <a target="_blank" href="https://travel--plus.herokuapp.com/">
+                                <h4 id="project-link" class="card-title text-center">Travel plus</h4>
+                            </a>
+                            <p class="card-text text-center">Travel helper system where it enables you to pick a country
+                                and date and will fetch the country details from API and show you the weather for your
+                                trip
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img height="300" class="card-img-top" src="images/devcamper.PNG" alt="Card image cap">
+                        <div class="card-body">
+                            <a target="_blank" href="https://dev--camper.herokuapp.com/">
+                                <h4 id="project-link" class="card-title text-center">DevCamper API
+                                </h4>
+                            </a>
+                            <p class="card-text text-center">Backend API built with node js for the managing Bootcamps
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <br>
+
+                <div class="card-deck text-dark">
+                    <div class="card">
                         <img height="300" class="card-img-top" src="images/encryption.PNG" alt="Card image cap">
                         <div class="card-body">
                             <a target="_blank"
