--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                                 <h4 id="project-link" class="card-title text-center">Contracts and Agreements System
                                 </h4>
                             </a>
-                            <p class="card-text text-center">A desktop appllicton build with swing framework on java
-                                Build for contract depretment in Ministry of Defense
-                                this system aim speed ​​up work of the departemnt by making printing and viewing the
+                            <p class="card-text text-center">A desktop application built on java
+                                for the contract department in Ministry of Defense
+                                this system aim speed ​​up work of the department by making printing and viewing the
                                 database easier</p>
                         </div>
                     </div>
