feat: fix the project URL

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="card ">
                         <img height="300" class="card-img-top" src="images/aswat.PNG" alt="Card image cap">
                         <div class="card-body">
-                            <a target="_blank" href="https://www.aswat.live">
+                            <a target="_blank" href="https://aswat-ar.herokuapp.com">
                                 <h4 id="project-link" class="card-title text-center">Arabic StrawPoll (Aswat)</h4>
                             </a>
                             <p class="card-text text-center">Arabic starwpoll system where it enables the users to host
@@ -87,7 +87,7 @@
                     <div class="card">
                         <img height="300" class="card-img-top" src="images/moviehub.PNG" alt="Card image cap">
                         <div class="card-body">
-                            <a target="_blank" href="https://www.moviehub.review/">
+                            <a target="_blank" href="https://movie--hub.herokuapp.com">
                                 <h4 id="project-link" class="card-title text-center">Moviehub</h4>
                             </a>
                             <p class="card-text text-center">Moivehub let you search by movie name
