--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/97935cb42c.js"></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+
 
 </head>
 
@@ -35,7 +40,7 @@
                 <div class="text-center m-auto">
                     <h1>Saleh Alibrahim</h2>
                         <nav class="nav justify-content-center">
-                            <a class="nav-link " href="index.httml">Home</a>
+                            <a class="nav-link " href="/index.html">Home</a>
                             <a class="nav-link " href="/about.html">About</a>
                         </nav>
                 </div>
