fix: fix the background position

--- a/about.html
+++ b/about.html
@@ -23,11 +23,10 @@
 
 <body>
     <div id="particles-js" style="
-    position: absolute;
+    position: fixed;
     width: -webkit-fill-available;
     height: -webkit-fill-available;
-    z-index: -1;
-"></div>
+    z-index: -1;"></div>
     <audio preload="auto" src="music.mp3" loop="true" autobuffer></audio>
 
     <div class="container">
