--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="particles-js" style="
-    position: absolute;
+    position: fixed;
     width: 100%;
     z-index: -1;
 "></div>
