feat: add readme.md

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <div id="particles-js" style="
     position: fixed;
     width: 100%;
-    z-index: -1;
-"></div>
+    z-index: -1;"></div>
 
     <div class="container ">
 
