fix: remove unused code

--- a/about.html
+++ b/about.html
@@ -22,16 +22,9 @@
 </head>
 
 <body>
-    <div id="particles-js" style="
-    position: fixed;
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
-    z-index: -1;"></div>
-    <audio preload="auto" src="music.mp3" loop="true" autobuffer></audio>
+    <div id="particles-js" style="position: fixed; width: 100%; z-index: -1;"></div>
 
     <div class="container">
-
-
 
         <!---------- Header ---------->
         <header>
