--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 </head>
 
 <body>
-    <div id="particles-js" style="
-    position: fixed;
-    width: 100%;
-    z-index: -1;"></div>
+
+    <div id="particles-js" style="position: fixed; width: 100%; z-index: -1;"></div>
 
     <div class="container ">
 
