feat: add new Image

--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
                     <div class="card">
                         <img height="300" class="card-img-top" src="images/contract.PNG" alt="Card image cap">
                         <div class="card-body">
-                            <a target="_blank"
-                                href="https://media-exp1.licdn.com/dms/image/C4E2DAQHO_v1KIqK8HA/profile-treasury-image-shrink_800_800/0/1596753714672?e=1608084000&v=beta&t=WmRF8WWlur3Qf9YnsHt2OkP5fjbIT0F2nVphlFAfPJ4">
+                            <a target="_blank" href="./images/recommendation-letter.jpg">
                                 <h4 id="project-link" class="card-title text-center">Contracts and Agreements System
                                 </h4>
                             </a>
