feat: add new projects

--- a/index.html
+++ b/index.html
@@ -158,6 +158,31 @@
                     </div>
 
                 </div>
+                <br>
+
+                <div class="card-deck text-dark">
+                    <div class="card">
+                        <img height="300" class="card-img-top" src="images/short-it.PNG" alt="Card image cap">
+                        <div class="card-body">
+                            <a target="_blank" href="https://short-it-ar.herokuapp.com">
+                                <h4 id="project-link" class="card-title text-center">Short url</h4>
+                            </a>
+                            <p class="card-text text-center">Short url is a simple tool built with node js for
+                                shorten long URL</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img height="300" class="card-img-top" src="images/text-extractor.PNG" alt="Card image cap">
+                        <div class="card-body">
+                            <a target="_blank" href="https://text-extractor-node.herokuapp.com">
+                                <h4 id="project-link" class="card-title text-center">text extractor</h4>
+                            </a>
+                            <p class="card-text text-center">text extractor is tool built with node js to extract text
+                                from images</p>
+                        </div>
+                    </div>
+
+                </div>
 
                 <br>
                 <h3 id="featuredProjects" class="text-center">Know More</h3>
