--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
-
-
 </head>
 
 <body>
@@ -172,13 +170,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img height="300" class="card-img-top" src="images/text-extractor.PNG" alt="Card image cap">
+                        <img height="300" class="card-img-top" src="images/breaking-bad.PNG" alt="Card image cap">
                         <div class="card-body">
-                            <a target="_blank" href="https://text-extractor-node.herokuapp.com">
-                                <h4 id="project-link" class="card-title text-center">text extractor</h4>
+                            <a target="_blank" href="https://breaking-bad-saleh.netlify.app">
+                                <h4 id="project-link" class="card-title text-center">Breaking Bad Cast</h4>
                             </a>
-                            <p class="card-text text-center">text extractor is tool built with node js to extract text
-                                from images</p>
+                            <p class="card-text text-center">Breaking Bad Cast a simple
+                                single page application build with react js , this app fetches the breaking bad api
+                                data and display it with grid system </p>
                         </div>
                     </div>
 
